--- a/GLI.CFG
+++ b/GLI.CFG
@@ -1,7 +1,8 @@
-LEIA=<cf74.xml>
-LEIA=<cf75.xml>
-LEIA=<cf76.xml>
-LEIA=<cf77.xml>
-LEIA=<cf78.xml>
-LEIA=<cf79.xml>
+STEMMER
+LEIA=<data/cf74.xml>
+LEIA=<data/cf75.xml>
+LEIA=<data/cf76.xml>
+LEIA=<data/cf77.xml>
+LEIA=<data/cf78.xml>
+LEIA=<data/cf79.xml>
 ESCREVA=<LISTA_INVERTIDA>
