--- a/BUSCA.CFG
+++ b/BUSCA.CFG
@@ -1,3 +1,3 @@
-MODELO=<RESULT/MODELO.json>
-CONSULTAS=<RESULT/CONSULTAS.csv>
-RESULTADOS=<RESULTADOS>
+MODELO=<RESULT/MODELO-STEMMER.json>
+CONSULTAS=<RESULT/CONSULTAS-STEMMER.csv>
+RESULTADOS=<RESULTADOS-STEMMER>
